@@ -1,5 +1,6 @@
 package com.example.scheduledevelop.schedule.service;
 
+import com.example.scheduledevelop.basic.SessionValue;
 import com.example.scheduledevelop.schedule.dto.*;
 import com.example.scheduledevelop.schedule.entity.Schedule;
 import com.example.scheduledevelop.schedule.repository.ScheduleRepository;
@@ -11,6 +12,7 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -22,12 +24,11 @@ public class ScheduleService {
 
     // 저장
     @Transactional
-    public ScheduleCreateResponse save(ScheduleCreateRequest request) {
+    public ScheduleCreateResponse save(ScheduleCreateRequest request, SessionValue sessionValue) {
 
-        User savedUser = userRepository.findById(request.getUserid()).orElseThrow(
+        User savedUser = userRepository.findById(sessionValue.getUserId()).orElseThrow(
                 () -> new IllegalStateException("존재하지 않는 유저입니다.")
         );
-
         Schedule schedule = new Schedule(
                 savedUser,
                 request.getTitle(),
@@ -38,34 +39,52 @@ public class ScheduleService {
         return ScheduleCreateResponse.from(savedschedule);
     }
 
-    // 다 건 조회
+    // 다 건 조회 v1
+
+//    public List<ScheduleGetResponse> findAll() {
+//        List<Schedule> schedules = scheduleRepository.findAll();
+//        return schedules.stream().map(ScheduleGetResponse::from).toList();
+//    }
+
+    /**
+     * 회원 목록 조회 서비스
+     * 1. 조회하기
+     * 2. Dto 만들기
+     * 3. dto 변환
+     * 4. 반환
+     */
     @Transactional(readOnly = true)
-    public List<ScheduleGetResponse> findAll() {
+    public ScheduleGetListResponse getScheduleList() {
         List<Schedule> schedules = scheduleRepository.findAll();
-        return schedules.stream().map(ScheduleGetResponse::from).toList();
+
+        List<ScheduleGetListResponse.ScheduleGetDto> scheduleGetList = schedules.stream()
+                .map(ScheduleGetListResponse.ScheduleGetDto::from)
+                .collect(Collectors.toList());
+
+        return new ScheduleGetListResponse(scheduleGetList);
     }
 
 
     // 단 건 조회
     @Transactional(readOnly = true)
-    public ScheduleGetResponse getByScheduleId(Long scheduleId) {
+    public ScheduleGetListResponse.ScheduleGetDto getByScheduleId(Long scheduleId) {
         Schedule savedSchedule = scheduleRepository.findById(scheduleId).orElseThrow(
                 () -> new IllegalStateException("존재하지 않는 일정입니다.")
         );
 
-        return ScheduleGetResponse.from(savedSchedule);
+        return ScheduleGetListResponse.ScheduleGetDto.from(savedSchedule);
 
     }
 
     // 수정
     @Transactional
-    public ScheduleUpdateResponse update(Long scheduleId, ScheduleUpdateRequest request) {
+    public ScheduleUpdateResponse update(Long scheduleId, ScheduleUpdateRequest request, SessionValue sessionValue) {
 
         Schedule updatedSchedule = scheduleRepository.findById(scheduleId).orElseThrow(
                 () -> new IllegalStateException("존재하지 않는 일정입니다.")
         );
 
-        if (!updatedSchedule.getUser().getId().equals(request.getUserid())) {
+        if (!updatedSchedule.getUser().getId().equals(sessionValue.getUserId())) {
             throw new IllegalStateException("작성한 유저만 수정할 수 있습니다.");
         }
         updatedSchedule.update(request);
@@ -74,11 +93,11 @@ public class ScheduleService {
 
     // 삭제
     @Transactional
-    public void delete(Long scheduleId,ScheduleDeleteRequest request) {
+    public void delete(Long scheduleId,SessionValue sessionValue) {
         Schedule deletedSchedule = scheduleRepository.findById(scheduleId).orElseThrow(
                 () -> new IllegalStateException("존재하지 않는 일정입니다.")
         );
-        if (!deletedSchedule.getUser().getId().equals(request.getUserid())) {
+        if (!deletedSchedule.getUser().getId().equals(sessionValue.getUserId())) {
             throw new IllegalStateException("작성한 유저만 삭제할 수 있습니다.");
         }
         scheduleRepository.delete(deletedSchedule);
